google cloud platform redirect added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   'longtitle': true,
                   'theme': 'white',
                   'ux_mode': 'redirect',
-                    'redirect_uri': 'http://localhost:5500/home-user.html',
+                    'redirect_uri': 'https://nadiahhh.github.io/MoneyQuest/home-user.html',
                   'onsuccess': onSuccess,
                   'onfailure': onFailure
                 });
