Realtime Database Updated - Able to take in username & email from third party authentication - Can store user details in realtime Database - Fixed a styling bug in home-user.html

--- a/home-user.html
+++ b/home-user.html
@@ -26,9 +26,7 @@
         <div class="awesome-text">
             <p id="awesome-big"><strong>XP PROGRESS TRACKER</strong></p>
             <p id="awesome-normal">Earn experience points by going through our quests! Click the button below to start learning!</p>
-            <div id="signup-button">
-            <button type="button" onclick="alert('Coming Soon ><')">Start a Quest</button>
-            </div>
+            <button type="button" onclick="alert('Coming Soon ><')" id="questStart">Start a Quest</button>
         </div>
         <section class="experience">
             <h2>Level 1</h2>
