--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" id="signInpassword" required>
               
-            <input type="submit" id="signIn" name="signIn" value="Sign In" />
+            <button id="signIn">Sign In</button>
           </div>
           <div class="container" style="background-color:#f1f1f1">
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
@@ -75,7 +75,7 @@
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
-      import { getDatabase } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-database.js";
+      import { getDatabase, set, ref } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-database.js";
       import {
         getAuth,
         createUserWithEmailAndPassword,
@@ -110,15 +110,26 @@
       const Tprovider = new TwitterAuthProvider();
 
       signUp.addEventListener("click", (e) => {
-        var user = document.getElementById("username").value;
+        var username = document.getElementById("username").value;
         var email = document.getElementById("email").value;
         var password = document.getElementById("password").value;
 
         createUserWithEmailAndPassword(auth, email, password)
           .then((userCredential) => {
             const user = userCredential.user;
-            alert("user created!");
-            window.location.replace("home-user.html");
+
+            set(ref(database, "users/" + user.uid), {
+              username: username,
+              email: email,
+            })
+            .then(() => {
+              // Data saved successfully!
+              alert("user created!");
+              window.location.replace("home-user.html");
+            })
+            .catch((error) => {
+              alert(error)
+            })     
           })
           .catch((error) => {
             const errorCode = error.code;
@@ -151,10 +162,32 @@
             const credential = GoogleAuthProvider.credentialFromResult(result);
             const token = credential.accessToken;
             // The signed-in user info.
-            const user = result.user;
-            // ...
-            window.location.replace("home-user.html");
-          })
+            //const user = result.user;
+            const user = auth.currentUser;
+
+            if (user !== null) {
+              user.providerData.forEach((profile) => {
+                console.log("Sign-in provider: " + profile.providerId);
+                console.log("Provider-specific UID: " + profile.uid);
+                console.log("Name: " + profile.displayName);
+                console.log("Email: " + profile.email);
+                const username = profile.displayName;
+                const email = profile.email;
+                set(ref(database, "users/" + user.uid), {
+                  username: username,
+                  email: email,
+                })
+                .then(() => {
+                  // Data saved successfully!
+                  alert(username + email);
+                  window.location.replace("home-user.html");
+                })
+                .catch((error) => {
+                  alert(error)
+                }) 
+            })
+          }
+        })
           .catch((error) => {
             // Handle Errors here.
             const errorCode = error.code;
@@ -165,8 +198,9 @@
             const credential = GoogleAuthProvider.credentialFromError(error);
             // ...
             alert(errorMessage);
-          });
-      });
+          })
+
+        });
 
       twitterLogin.addEventListener("click", (e) => {
         signInWithPopup(auth, Tprovider)
@@ -178,10 +212,33 @@
             const secret = credential.secret;
 
             // The signed-in user info.
-            const user = result.user;
+            //const user = result.user;
             // ...
-            window.location.replace("home-user.html");
-          })
+            const user = auth.currentUser;
+
+            if (user !== null) {
+              user.providerData.forEach((profile) => {
+                console.log("Sign-in provider: " + profile.providerId);
+                console.log("Provider-specific UID: " + profile.uid);
+                console.log("Name: " + profile.displayName);
+                console.log("Email: " + profile.email);
+                const username = profile.displayName;
+                const email = profile.email;
+                set(ref(database, "users/" + user.uid), {
+                  username: username,
+                  email: email,
+                })
+                .then(() => {
+                  // Data saved successfully!
+                  alert(username + email);
+                  window.location.replace("home-user.html");
+                })
+                .catch((error) => {
+                  alert(error)
+                }) 
+            })
+          }
+        })
           .catch((error) => {
             // Handle Errors here.
             const errorCode = error.code;
