--- a/home-user.html
+++ b/home-user.html
@@ -1,81 +1,190 @@
 <!DOCTYPE html>
 <html lang="en" class="non-login">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
-</head>
-<body class="home-user-body">
+  </head>
+  <body class="home-user-body">
     <div class="header">
-        <a href="home-user.html"><img src="./images/TECH_USAGE.png" alt="SmartMoney Logo" width="250" height="80" id="logo"></a>
-        <div id="empty-header"></div>
-        <div id="header-options">
-            <a href="about.html" class="header-link"> ABOUT US </a>
-            <a href="course.html" class="header-link"> QUESTS </a>
-            <a href="contact.html" class="header-link"> CONTACT US </a>
-            <a href="profile.html" class="header-link">YOUR PROFILE</a>
-        </div>
+      <a href="home-user.html"
+        ><img
+          src="./images/TECH_USAGE.png"
+          alt="SmartMoney Logo"
+          width="250"
+          height="80"
+          id="logo"
+      /></a>
+      <div id="empty-header"></div>
+      <div id="header-options">
+        <a href="about.html" class="header-link"> ABOUT US </a>
+        <a href="course.html" class="header-link"> QUESTS </a>
+        <a href="contact.html" class="header-link"> CONTACT US </a>
+        <img src="./images/user.png" id="pfp"/>
+        <div class="dropdown">
+            <button class="dropbtn" id="profileName">YOUR PROFILE 
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="profile.html">YOUR PROFILE</a>
+                <button id="signOutbtn">SIGN OUT</button>
+            </div>
+          </div> 
+      </div>
     </div>
 
     <div class="awesome">
-        <div class="awesome-text">
-            <p id="awesome-big"><strong>XP PROGRESS TRACKER</strong></p>
-            <p id="awesome-normal">Earn experience points by going through our quests! Click the button below to start learning!</p>
-            <button type="button" onclick="alert('Coming Soon ><')" id="questStart">Start a Quest</button>
+      <div class="awesome-text">
+        <p id="awesome-big"><strong>RESUME YOUR ADVENTURE NOW!</strong></p>
+        <p id="awesome-normal">
+          Earn experience points by going through our quests! Click the button
+          below to start learning!
+        </p>
+        <button type="button" onclick="alert('Coming Soon ><')" id="questStart">
+          Start a Quest
+        </button>
+      </div>
+      <section class="experience">
+        <h2>Level 1</h2>
+        <input type="checkbox" />
+        <div class="exp-bar">
+          <span><span></span></span>
         </div>
-        <section class="experience">
-            <h2>Level 1</h2>
-            <input type="checkbox" />
-            <div class="exp-bar">
-                <span><span></span></span>
-            </div>
-            Press the checkbox to get free XP!
-        </section>
+        Press the checkbox to get free XP!
+      </section>
     </div>
-    
+
     <div class="random">
-        <p id="random-header"><strong>Check out our interesting Quests!</strong></p>
-        <div class="course-list">
-            <div class="course-list-table"><img src="./images/sword.png" height="100" width="100">
-                <div class="title-description">
-                    <h1><a href="#finance">FIGHTING FINANCE</a></h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, magni tempore omnis inventore corporis deserunt corrupti natus adipisci pariatur temporibus cum laudantium consectetur, 
-                        officiis deleniti expedita saepe reiciendis at sunt.</p>
-                </div>
-            </div>
-            <div class="course-list-table">
-                <img src="./images/map.png" height="100" width="100">
-                <div class="title-description">
-                <h1><a href="#stocks">SEEKING STOCKS</a></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos sed voluptates non illum nam dolor cum tempore sunt esse accusantium labore distinctio minus sapiente veniam, numquam ullam deleniti magni quidem.</p>
-                </div>
-            </div>
-            <div class="course-list-table">
-                <img src="./images/smoke.png" height="100" width="100">
-                <div class="title-description">
-                <h1><a href="#investments">INVENTING INVESTMENTS</a></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat perspiciatis laudantium inventore cum alias ea ab et nostrum eveniet ipsa iste dolor facilis repellat harum, blanditiis laboriosam numquam quidem maiores?</p></div>
-            </div>
+      <p id="random-header">
+        <strong>Check out our interesting Quests!</strong>
+      </p>
+      <div class="course-list">
+        <div class="course-list-table">
+          <img src="./images/sword.png" height="100" width="100" />
+          <div class="title-description">
+            <h1><a href="#finance">FIGHTING FINANCE</a></h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reprehenderit, magni tempore omnis inventore corporis deserunt
+              corrupti natus adipisci pariatur temporibus cum laudantium
+              consectetur, officiis deleniti expedita saepe reiciendis at sunt.
+            </p>
+          </div>
         </div>
+        <div class="course-list-table">
+          <img src="./images/map.png" height="100" width="100" />
+          <div class="title-description">
+            <h1><a href="#stocks">SEEKING STOCKS</a></h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos sed
+              voluptates non illum nam dolor cum tempore sunt esse accusantium
+              labore distinctio minus sapiente veniam, numquam ullam deleniti
+              magni quidem.
+            </p>
+          </div>
+        </div>
+        <div class="course-list-table">
+          <img src="./images/smoke.png" height="100" width="100" />
+          <div class="title-description">
+            <h1><a href="#investments">INVENTING INVESTMENTS</a></h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+              perspiciatis laudantium inventore cum alias ea ab et nostrum
+              eveniet ipsa iste dolor facilis repellat harum, blanditiis
+              laboriosam numquam quidem maiores?
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="signup">
-        <div class="signup-container">
-            <div id="signup-text">
-                <p><strong>Call to action! It's time!</strong></p>
-                <p id="small"><light>Sign up for our product by clicking the button right over there!</light></p>
-            </div>
-            <div id="signup-button">
-                <button type="button" onclick="alert('You have signed up!')">Sign up</button>
-            </div>
+      <div class="signup-container">
+        <div id="signup-text">
+          <p><strong>Call to action! It's time!</strong></p>
+          <p id="small">
+            <light
+              >Sign up for our product by clicking the button right over
+              there!</light
+            >
+          </p>
         </div>
+        <div id="signup-button">
+          <button type="button" onclick="alert('You have signed up!')">
+            Sign up
+          </button>
+        </div>
+      </div>
     </div>
     <footer>
-        <p>Copyright © The Odin Project 2021</p>
+      <p>Copyright © The Odin Project 2021</p>
     </footer>
-</body>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
+      import {
+        getDatabase,
+        set,
+        ref,
+      } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-database.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signOut,
+      } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyDelOkZ6SXJps2pThcz6cx8L7L5c_UyWSk",
+        authDomain: "moneyquest-95b23.firebaseapp.com",
+        databaseURL:
+          "https://moneyquest-95b23-default-rtdb.asia-southeast1.firebasedatabase.app/",
+        projectId: "moneyquest-95b23",
+        storageBucket: "moneyquest-95b23.appspot.com",
+        messagingSenderId: "284033417808",
+        appId: "1:284033417808:web:e7da6e1b37c8327597c755",
+        measurementId: "G-YKCGXSYYXG",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const database = getDatabase(app);
+      const auth = getAuth();
+
+      signOutbtn.addEventListener("click", (e) => {
+        signOut(auth)
+          .then(() => {
+            // Sign-out successful.
+            alert("user signed out!");
+            window.location.replace("index.html");
+          })
+          .catch((error) => {
+            // An error happened.
+            const errorCode = error.code;
+            const errorMessage = error.message;
+            alert(errorMessage);
+          });
+      });
+
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          // User is signed in, see docs for a list of available properties
+          // https://firebase.google.com/docs/reference/js/firebase.User
+          const uid = user.uid;
+          const name = user.displayName;
+          const email = user.email;
+          document.getElementById("profileName").textContent= name;
+          document.getElementById("awesome-big").textContent= "RESUME YOUR ADVENTURE NOW, " + name +"!";
+        } else {
+          // User is signed out
+          // ...
+        }
+      });
+    </script>
+  </body>
 </html>
