Major Changes- added new pages & updated old pages
Home User Page
- Updated styling
- Added new background for courses
- Added course description
- Updated styling for navigation bar
- Added username in navigation bar
- Added username in title section

Profile Page
- Added profile page
- Added profile picture
- Added email and display name from firebase
- Allowed edits on username & accept changes

About Page
- Created about page on SmartMoney & creator

Course Page
- Created course page on description and list of courses

Contact Page
- Created contact details
- Added icons and link to website's social medias
- Added contact form for users to send messages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="login">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -179,7 +179,6 @@
                 })
                 .then(() => {
                   // Data saved successfully!
-                  alert(username + email);
                   window.location.replace("home-user.html");
                 })
                 .catch((error) => {
@@ -230,7 +229,6 @@
                 })
                 .then(() => {
                   // Data saved successfully!
-                  alert(username + email);
                   window.location.replace("home-user.html");
                 })
                 .catch((error) => {
