--- a/forum.html
+++ b/forum.html
@@ -18,6 +18,13 @@
       href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
+    <!-- *******************************************************************************************
+       * TODO(DEVELOPER): Paste the initialization snippet from this dialog box:
+       * Firebase Console > Project Settings > Add App > Web.
+       ***************************************************************************************** -->
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Forum</title>
   </head>
@@ -61,7 +68,13 @@
         </div>
       </div>
     </div>
-    <input type="text" id="forum-title" name="title" placeholder="Title" />
+  
+    <div class="flexing">
+      <p id="demo"></p>
+    <div id="forumcolumn">
+      <h1 id="forumTopic">  Start A Discussion Here!</h1>
+    <input type="text" id="forum-title" name="title" placeholder="Title"/>
+    <br>
     <textarea
       id="forum-desc"
       name="desc"
@@ -69,10 +82,13 @@
       cols="50"
       placeholder="Write your message here."
     ></textarea>
-
+    <br>
     <input type="submit" id="forumSubmit" name="forumSubmit" value="Post it!" />
+  </div>
+  
 
-    <p id="demo"></p>
+    
+  </div>
 
     <footer>
       <p>Copyright © The Orbital Project 2022</p>
@@ -114,7 +130,7 @@
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
       // Initialize Cloud Firestore and get a reference to the service
-      const db = getFirestore(app);
+      const db = getFirestore();
       const auth = getAuth();
 
       signOutbtn.addEventListener("click", (e) => {
@@ -144,7 +160,8 @@
             .then((snapshot) => {
               if (snapshot.exists()) {
                 console.log(snapshot.val());
-                document.getElementById("profileName").textContent = snapshot.val().username;
+                document.getElementById("profileName").textContent =
+                  snapshot.val().username;
               } else {
                 console.log("No data available");
               }
@@ -181,6 +198,9 @@
       querySnapshot.forEach((doc) => {
         // doc.data() is never undefined for query doc snapshots
         var user = document.createTextNode(doc.data().username);
+        var timestamp = document.createTextNode(
+          doc.data().time
+        );
         var x = document.createElement("B");
         x.appendChild(user);
         var titleContent = document.createTextNode(doc.data().title);
@@ -197,6 +217,10 @@
         document
           .getElementById("demo")
           .appendChild(document.createElement("br"));
+        document.getElementById("demo").appendChild(timestamp);
+        document
+          .getElementById("demo")
+          .appendChild(document.createElement("br"));
         document
           .getElementById("demo")
           .appendChild(document.createElement("br"));
@@ -205,47 +229,42 @@
       forumSubmit.addEventListener("click", (e) => {
         var title = document.getElementById("forum-title").value;
         var desc = document.getElementById("forum-desc").value;
-
+        var now = new Date();
+        var myTimestamp = now.toString().substring(0,21);
+        // var myTimestamp = new Date(firebase.firestore.Timestamp.now().seconds*1000).toLocaleDateString();
+        console.log(myTimestamp);
         try {
           onAuthStateChanged(auth, (user) => {
-        const dbRef = ref(getDatabase(app));
-        if (user) {
-          // User is signed in, see docs for a list of available properties
-          // https://firebase.google.com/docs/reference/js/firebase.User
-          const uid = user.uid;
-          const name = user.username;
-          get(child(dbRef, `users/${uid}`))
-            .then((snapshot) => {
-              if (snapshot.exists()) {
-                console.log(snapshot.val());
-                var username = snapshot.val().username;
-                const docRef = addDoc(collection(db, "forums"), {
-                title: title,
-                desc: desc,
-                username: username
+            const dbRef = ref(getDatabase(app));
+            if (user) {
+              // User is signed in, see docs for a list of available properties
+              // https://firebase.google.com/docs/reference/js/firebase.User
+              const uid = user.uid;
+              const name = user.username;
+              get(child(dbRef, `users/${uid}`)).then((snapshot) => {
+                if (snapshot.exists()) {
+                  console.log(snapshot.val());
+                  var username = snapshot.val().username;
+                  const docRef = addDoc(collection(db, "forums"), {
+                    title: title,
+                    desc: desc,
+                    username: username,
+                    time: myTimestamp
+                  });
+
+                  console.log("Document written with ID: ", docRef.id);
+                }
               });
-
-              console.log("Document written with ID: ", docRef.id);
-
-            } 
-
-      })
-              } else {
-                console.log("No data available");
-              }
-            })
-            .catch((error) => {
-              console.error(error);
-            });
-        } 
-        catch (e) {
-              console.error("Error adding document: ", e);
+            } else {
+              console.log("No data available");
             }
+          }).catch((error) => {
+            console.error(error);
+          });
+        } catch (e) {
+          console.error("Error adding document: ", e);
+        }
       });
-              
-
-
-
 
       // Initialize Cloud Firestore and get a reference to the service
 
