Mock Page for Course - Added a mock page for Courses - Edited home page to include link to courses

--- a/home-user.html
+++ b/home-user.html
@@ -72,7 +72,7 @@
           <div class="hero-image">
           <img src="./images/sword.png" height="100" width="100" />
           <div class="title-description">
-            <a class='animated-arrow' href='#finance'>
+            <a class='animated-arrow' href='finance.html'>
               <span class='the-arrow -left'>
                 <span class='shaft'></span>
               </span>
